changing z-index to a more reasonable number to avoid crushing modals

--- a/app/assets/stylesheets/_tipsy.sass
+++ b/app/assets/stylesheets/_tipsy.sass
@@ -4,7 +4,7 @@
   padding: 5px
   font-size: 10px
   position: absolute
-  z-index: 100000
+  z-index: 900
 
 .tipsy-inner
   padding: 5px 8px 4px 8px
